--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "now-ui-kit-react",
+  "homepage": "https://mrcuacky.github.io/contreras_examen_parcial1/build",
   "version": "1.5.2",
   "private": true,
   "dependencies": {
